--- a/quantecon/4_intro_to_dynamics/29_A_First_Look_at_the_Kalman_Filter.ipynb
+++ b/quantecon/4_intro_to_dynamics/29_A_First_Look_at_the_Kalman_Filter.ipynb
@@ -33,7 +33,8 @@
     "  - [Convergence](#Convergence)  \n",
     "  - [Implementation](#Implementation)  \n",
     "  - [Exercises](#Exercises)  \n",
-    "  - [Solutions](#Solutions)  "
+    "  - [Solutions](#Solutions)\n",
+    "  - [Wikipedia](https://en.wikipedia.org/wiki/Kalman_filter)"
    ]
   },
   {
@@ -170,7 +171,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "80b3f6d3",
+   "id": "a8c7f1bd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +257,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "8e4ae2f5",
+   "id": "70d46925",
    "metadata": {},
    "outputs": [
     {
